Fixed cursor on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -290,6 +290,7 @@
         }
     }
     @media screen and (max-width: 780px) {
+        #dot, #pentagon {display: none;}
         body {
             font-size: 14px;
         }
@@ -304,6 +305,11 @@
       .header {          
           &__button {
               display: inline-block;
+                background: white;
+                border: none;
+                padding-bottom: 8px;
+                border: 1px solid black;
+                border-radius: 10px;
               &_right {
                 float: right;
                 margin-right: 35px;
